--- a/style.css
+++ b/style.css
@@ -1,5 +1,72 @@
-.hidden {
-    display: none;
+/* Styles for the overlay */
+#overlay {
+   
+    position: fixed;
+    top: 0;
+    right: -100%;
+    /* Initially hidden off-screen */
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    transition: right 0.5s ease-in-out;
+}
+
+.overlay-content {
+    width: 80%;
+    /* Adjust the width as needed */
+    max-width: 400px;
+    /* Maximum width for content */
+    text-align: center;
+}
+
+.overlay-navLinks {
+    margin-bottom: 20px;
+   
+    display: flex;
+    flex-direction: column;
+    gap: 3em;
+    color: white;
+
+}
+
+
+
+
+
+.overlay-close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    color: white;
+    z-index: 9999;
+}
+
+/* Media query to show/hide navigation */
+@media (max-width: 767px) {
+    #navLinks {
+        display: none;
+        /* Hide on mobile */
+    }
+
+    #navToggle {
+        display: block;
+        
+        /* Show fa-bars icon on mobile */
+    }
+
+    #overlay {
+        right: 0;
+        
+        /* Show overlay on mobile after clicking fa-bars */
+    }
+        .overlay-navLinks>a {
+            color: white;
+        }
 }
 
 
