--- a/style.css
+++ b/style.css
@@ -107,7 +107,8 @@ body {
 h1,
 h2,
 h3 {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'EB Garamond', serif;
+font-family: 'Roboto', sans-serif;
 }
 
 p,
